--- a/idex3.html
+++ b/idex3.html
@@ -36,7 +36,7 @@
           </nav>
         </header>
     <nav>
-          <p><h1>Apps Movile</h1></p>
+          <p><h1>Apps Moviles</h1></p>
           <h3>Hay algunas apps que obligatoriamente se deben descargar de la google play store</h3>
         <section>
           <div class="contenedor_limite_2">
